@@ -1,3 +1,7 @@
+zg 08.10.2016 13:51:32 +0200 - build 4813
+
+1. 0003324: Find/Replace in editor does not highlight found entries.
+
 drkns 08.10.2016 10:38:23 +0200 - build 4812
 
 1. Обход очередного бага VS.
